2008-01-10  Hans Boehm <Hans.Boehm@hp.com>
	
	* include/gc_version.h, configure.ac, doc/README:
	Change to version 7.1alpha3.
	* configure: Regenerate.

[7.1alpha2]

2008-01-10  Hans Boehm <Hans.Boehm@hp.com>
	
	* include/gc_version.h, configure.ac, doc/README:
	Change to version 7.1alpha2.
	* configure: Regenerate.

2008-01-10  Hans Boehm <Hans.Boehm@hp.com>
	
	* Makefile.am: Mention atomic_ops.c and atomic_ops_sysdeps.S
	again.  Refer to build directory as ".".
	* Makefile.in: Regenerate.
	
2008-01-10  Hans Boehm <Hans.Boehm@hp.com>

	* configure.ac: Ignore --enable-parallel-mark on Darwin for now.
	* configure: Regenerate.
	* darwin_stop_world.c: Add FIXME comment for parallel marker.

2008-01-09  Hans Boehm <Hans.Boehm@hp.com>

	* include/private/gc_priv.h: Update MAX_ROOT_SETS
	and LOG_PHT_ENTRIES to handle larger heaps.

2008-01-03  Hans Boehm <Hans.Boehm@hp.com>

	* include/gc.h (GC_INIT,GC_init): Update comments.

2008-01-03  Hans Boehm <Hans.Boehm@hp.com> (based on a patch from
	John Bowman, and an ancient patch from Fergus Henderson)

	* allchblk.c, alloc.c, include/private/gc_priv.h:
	Track GC_bytes_dropped and use in GC triggering decisions.
	* alloc.c (min_bytes_allocd): Weight atomic blocks less.

2008-01-02  Hans Boehm <Hans.Boehm@hp.com>

	* alloc.c (GC_add_to_heap): Call GC_install_header(p) AFTER
	adjusting p.

2007-12-23  Hans Boehm <Hans.Boehm@hp.com>

	* Makefile.am: Add NT_X64_THREADS_MAKEFILE.
 
2007-12-23  Hans Boehm <Hans.Boehm@hp.com> (Really mostly Friedrich Dominicus)

	* NT_X64_STATIC_THREADS_MAKEFILE: Clean up obsolete comment.
	* alloc.c: Add declaration for GC_add_current_malloc_heap.
	* win32_threads.c (GC_beginthreadex): Clean up error
	return code.
	* doc/README.win64, NT_X64_THREADS_MAKEFILE, Makefile.direct:
	Add NT_X64_THREADS_MAKEFILE.

2007-12-21  Hans Boehm <Hans.Boehm@hp.com>

	* alloc.c: Define GC_version instead of in version.h.
	* version.h: Remove.
	* include/gc_version.h: Move most of version.h here.